# harvester

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
src/harvester/: aggregate.py  cli.py  commits.py  gform.py  harvest.py  invoice.py  pdf.py  review.py  spreadsheet.py
tests/: test_aggregate.py
