[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harvester"
version = "0.1.0"
description = "Auto-fill Harvest timesheets from git commits"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "pyyaml>=6.0",
  "python-dotenv>=1.0",
  "openpyxl>=3.1",
  "rich>=13.7",
  "click>=8.1",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
playwright = ["playwright>=1.40"]

[project.scripts]
harvester = "harvester.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
